Bug fixes and delete old solver system